# World-Simulator

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini  index.html
docs/: api_reference.md  description.md  developer_guide.md  extended_examples.md  model_expansion_catalog.md  model_format_doc.md  user_guide.md
include/ws/app/: checkpoint_io.hpp  checkpoint_storage.hpp  data_importer.hpp  noise_generator.hpp  profile_store.hpp  runtime_shell.hpp  shell_support.hpp  world_store.hpp
include/ws/core/: checkpoint_manager.hpp  control_surface.hpp  determinism.hpp  event_queue.hpp  field_resolver.hpp  initialization_binding.hpp  initialization_strategy.hpp  interactions.hpp  ir_ast.hpp  model_parser.hpp  multidim_support.hpp  neighborhood.hpp  observability.hpp  openmp_support.hpp  probe.hpp  profile.hpp  random.hpp  replay.hpp  replay_engine.hpp  run_signature.hpp  runtime-detail.hpp  runtime.hpp  scheduler.hpp  spatial_scheme.hpp  state_store.hpp  time_integrator.hpp  types.hpp  unit_lint.hpp  unit_system.hpp  vectorized_ops.hpp
include/ws/gui/: accessibility_manager.hpp  build_info.hpp  constraint_monitor.hpp  contour_renderer.hpp  crash_report.hpp  data_operation_contract.hpp  display_manager-detail.hpp  display_manager.hpp  error_context.hpp  event_logger.hpp  exception_message.hpp  generation_advisor.hpp  heatmap_renderer.hpp  histogram_panel.hpp  keyboard_shortcuts.hpp  launch_options.hpp  layout_constants.hpp  main_window.hpp  message_formatter.hpp  model_editor_window.hpp  model_history.hpp  model_selector.hpp  model_validator.hpp  node_editor.hpp  onboarding_tutorial.hpp  paint_tools.hpp  parameter_panel.hpp  perturbation_panel.hpp  platform_display_scale.hpp  render_rules.hpp  runtime_service-detail.hpp  runtime_service.hpp  shader_editor.hpp  status_message.hpp  storage_paths.hpp  theme_bootstrap.hpp  theme_manager.hpp  time_control_panel.hpp  timeseries_panel.hpp  ui_components.hpp  (+5 more)
models/: environmental_model_2d.yaml  game_of_life_model.yaml
models/Symbiose Game of Life Model_copy.simmodel/: logic.ir  metadata.json  model.json  version.json
models/coastal_biogeochemistry_transport.simmodel/: logic.ir  metadata.json  model.json  version.json
models/environmental_model_2d.simmodel/: logic.ir  metadata.json  model.json  version.json
models/forest_fire_propagation.simmodel/: logic.ir  metadata.json  model.json  version.json
models/game_of_life_model.simmodel/: metadata.json  model.json  version.json
models/gray_scott_reaction_diffusion.simmodel/: logic.ir  metadata.json  model.json  version.json
models/navier_stokes_fluid_solver.simmodel/: logic.ir  metadata.json  model.json  version.json
models/predator_prey_dynamics.simmodel/: logic.ir  metadata.json  model.json
models/shallow_water_equations.simmodel/: logic.ir  metadata.json  model.json
models/urban_microclimate_resilience.simmodel/: logic.ir  metadata.json  model.json  version.json
profiles/: office_default.wsprofile
scripts/: ops_demo.wscli
sim_interaction_web/: app.js  interaction-data.json  server.js  simmodel-loader.js  styles.css
src/: main.cpp
src/app/: checkpoint_io.cpp  checkpoint_storage.cpp  data_importer.cpp  noise_generator.cpp  profile_store.cpp  runtime_shell.cpp  shell_support.cpp  world_store.cpp
src/core/: checkpoint_manager.cpp  event_queue.cpp  field_resolver.cpp  initialization_binding.cpp  initialization_strategy.cpp  interactions.cpp  ir.l  ir.y  ir_ast.cpp  model_parser.cpp  model_schema.fbs  multidim_support.cpp  neighborhood.cpp  observability.cpp  probe.cpp  profile_resolver.cpp  random.cpp  replay.cpp  replay_engine.cpp  run_signature.cpp  runtime.cpp  scheduler.cpp  spatial_scheme.cpp  state_store.cpp  time_integrator.cpp  unit_lint.cpp  unit_system.cpp  vectorized_ops.cpp
src/core/subsystems/: bootstrap_subsystem.cpp  subsystems.cpp
src/gui/: accessibility_manager.cpp  constraint_monitor.cpp  contour_renderer.cpp  crash_report.cpp  display_manager.cpp  event_logger.cpp  generation_advisor.cpp  heatmap_renderer.cpp  histogram_panel.cpp  keyboard_shortcuts.cpp  launch_options.cpp  main.cpp  main_window.cpp  model_editor_window.cpp  model_history.cpp  model_selector.cpp  model_validator.cpp  node_editor.cpp  paint_tools.cpp  parameter_panel.cpp  perturbation_panel.cpp  platform_display_scale.cpp  property_inspector.cpp  render_rule_editor.cpp  runtime_service.cpp  shader_editor.cpp  storage_paths.cpp  theme_bootstrap.cpp  theme_manager.cpp  time_control_panel.cpp  timeseries_panel.cpp  ui_components.cpp  vector_renderer.cpp  viewport_manager.cpp  world_generator.cpp  world_selector.cpp  world_viewport.cpp
src/gui/main_window/: color_utils.cpp  detail_utils.cpp  overlay_rendering.cpp  platform_dialogs.cpp  session_wizard_helpers.cpp  window_state_store.cpp
src/gui/presentation/: display_manager.cpp  render_rule_editor.cpp  viewport_manager.cpp
src/gui/resources/: world_simulator.manifest  world_simulator.manifest.in  world_simulator_icon.rc  world_simulator_icon.rc.in  world_simulator_icon_id.h  world_simulator_version.rc.in
src/gui/runtime/: runtime_service.cpp
tests/: advanced_coupling.cpp  advanced_features.cpp  checkpoint_variable_cadence.cpp  control_replay.cpp  conway_activity.cpp  crash_report_test.cpp  data_importer_test.cpp  determinism_core.cpp  display_manager_validation.cpp  error_context_test.cpp  exception_message_test.cpp  full_pipeline_multi_model.cpp  initialization_strategy.cpp  integration_multi_model.cpp  interactions.cpp  launch_options_test.cpp  live_patching.cpp  message_formatter_test.cpp  model_history.cpp  model_parser_test.cpp  model_validator_test.cpp  noise_generator_test.cpp  onboarding_tutorial_test.cpp  parallel_stability.cpp  performance_optimization.cpp  profile_store.cpp  runtime_integrator_switch.cpp  shader_editor_test.cpp  shell_support.cpp  simulation_loop.cpp  state_store_engine.cpp  status_message_test.cpp  subsystems.cpp  time_control_scrubbing.cpp  time_integrator.cpp  ui_error_paths_multi_model.cpp  ui_state_transitions_multi_model.cpp  unit_lint_test.cpp  viewport_manager.cpp
(+21 files in other folders)
